feat(deps) bump netty version to 4.2.x